# Django_test

./: .gitignore  pyproject.toml
Django_test/: asgi.py  settings.py  urls.py  wsgi.py
main/: views.py
main/templates/main/: index.html
