[tool.poetry]
name = "django_test"
version = "0.1.0"
description = ""
authors = ["live <ivanovilya14122000@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
